--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -32,9 +32,7 @@ img{
 }
 
 .logo {
-  width: 10%;
-  min-width: 3rem;
-  max-width: 3rem;
+  width: 10rem;
   filter: $filter-white;
   margin-left: 1em;
   float: left;
@@ -44,8 +42,7 @@ img{
 
 .footer-logo {
   
-    min-width: 5rem;
-    max-width: 5rem;
+    width: 10rem;
     margin-left: auto;
     margin-right: auto;
     float: none;
