--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -27,7 +27,10 @@
 
 // Services Page
 
-@import 'services/services';
+@import 'pages/services';
 
 // Contact Page
-@import 'contact/contact';
+@import 'pages/contact';
+
+// Gallery Page
+@import 'pages/gallery';
