--- a/assets/sass/components/_contact-form.scss
+++ b/assets/sass/components/_contact-form.scss
@@ -79,7 +79,7 @@ label.fcf-label {
 
 .fcf-btn-primary {
     color: $light;
-    background-color: $main;
+    background-color: $secondary;
 }
 
 .fcf-btn-primary:hover {
