--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -33,18 +33,8 @@ img{
 
 .logo {
   width: 10rem;
-  filter: $filter-white;
-  margin-left: 1em;
-  float: left;
-
-  
-}
-#dark {
-
-  .logo {
-      filter: $filter-dark;
-  }
-
+  margin-left: 1rem;
+  float: left;  
 }
 
 .footer-logo {
@@ -57,7 +47,9 @@ img{
 
 }
 
-
+.spacer{
+  padding: 6rem 0;
+}
 
 
 @media screen and (min-width: 900px) {
