--- a/assets/sass/layout/_cta.scss
+++ b/assets/sass/layout/_cta.scss
@@ -1,5 +1,6 @@
 .cta {
     padding-top: 1rem;
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
     background: url("../images/cta.webp") no-repeat;
     overflow: hidden;
     background-size: cover;
