--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -1,193 +1,160 @@
 .main-nav {
-    background-color: $main;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 100%;
-    font-size: 1.2rem;
-    padding-top: 0.75rem;
-    padding: 0;
+  background-color: $background;
+  position: absolute;
+  top: -10000%;
+  margin-top: 1rem;
+  right: 0;
+  left: 0;
+  font-size: 1.2rem;
+  padding-top: 1.75rem;
+  padding: 0;
 
+  overflow: hidden;
 
+  transition: all ease-in-out 250ms;
 
-    overflow: hidden;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
 
-    transition: all ease-in-out 250ms;
+  @media screen and (min-width: 1100px) {
+    padding: 0.5rem;
+    max-width: 700px;
+    padding-top: 2rem;
+    position: relative;
+    background: none;
+    margin-left: 2rem;
+    left: 0;
+    min-width: 200px;
+    float: right;
+  }
 
-    z-index: 2;
+  ul {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    height: 50vh;
+    padding-left: 0;
 
+    @media (min-width: 1100px) {
+      flex-direction: row;
+      height: auto;
+    }
+  }
 
+  li {
+    margin: 0;
+    flex: 1 1 auto;
+    display: flex;
+    padding-bottom: 2rem;
 
+    @media (min-width: 1100px) {
+      display: inline;
+      border: none;
+      text-align: right;
+      padding-left: 2rem;
+    }
+  }
 
-    @media (min-width: 768px) {
-        padding: 0.5rem;
-        max-width: 500px;
-        position: relative;
-        flex: auto;
+  a {
+    color: $font-main;
+    text-decoration: none;
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+
+    @media (min-width: 1100px) {
+      color: $font-main;
+      display: inline-block;
+
+      &:hover {
         background: none;
-        margin-top: 1em;
-        margin-left: 2em;
-        left: 0;
+        color: $secondary;
+      }
 
+      &::after {
+        content: '';
+        width: 0px;
+        height: 2px;
+        display: block;
+        background: $secondary;
+        transition: all ease-in 250ms;
+      }
+
+      &:hover::after {
+        width: 100%;
+      }
     }
+  }
 
-    ul {
+  &.is-open {
+    top: 0;
+  }
 
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        height: 100vh;
+  .selected {
+    color: $secondary;
+    background: none;
+    @media (min-width: 1100px) {
+      &::after {
+        content: '';
+        width: 0px;
+        height: 2px;
 
-        @media (min-width: 768px) {
-
-            flex-direction: row;
-            height: auto;
-
-        }
+        background: $secondary;
+        width: 100%;
+      }
     }
-
-
-
-
-    li {
-        margin: 0;
-        flex: 1 1 auto;
-        border-bottom: 1px solid $light;
-        display: flex;
-
-        @media (min-width: 768px) {
-            display: inline;
-            border: none;
-            text-align: right;
-        }
-
-    }
-
-
-
-    a {
-        color: $light;
-        text-decoration: none;
-        flex-basis: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-
-
-        &:hover {
-            background: $tertiary;
-            text-decoration: none;
-        }
-
-        @media (min-width: 768px) {
-            color: $light;
-            display: inline-block;
-
-            &:hover {
-                background: none;
-            }
-
-            &::after {
-                content: '';
-                width: 0px;
-                height: 2px;
-                display: block;
-                background: $tertiary;
-                transition: all ease-in 250ms;
-            }
-
-
-            &:hover::after {
-                width: 100%;
-            }
-
-
-
-        }
-    }
-
-    &.is-open {
-        left: 0;
-    }
+  }
 }
-
-
 
 /* Hamburger Menu*/
 
 .nav-toggle {
-    display: block;
-    padding: 1em;
-    position: absolute;
-    cursor: pointer;
-    right: 1em;
-    top: 1em;
-    z-index: 3;
+  display: block;
+  padding: 1rem;
+  position: absolute;
+  cursor: pointer;
+  right: 1rem;
+  top: 3.5rem;
+  z-index: 3;
 
-    @media (min-width: 768px) {
-
-        display: none;
-
-    }
+  @media (min-width: 1100px) {
+    display: none;
+  }
 }
 
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    content: '';
-    display: block;
-    width: 2em;
-    height: 3px;
-    background-color: $light;
-    border-radius: 3px;
-    transition: all ease-in-out 250ms;
+  content: '';
+  display: block;
+  width: 2rem;
+  height: 3px;
+  background-color: $font-main;
+  border-radius: 3px;
+  transition: all ease-in-out 250ms;
 }
 
 .hamburger::before {
-    transform: translateY(-6px);
+  transform: translateY(-6px);
 }
 
 .hamburger::after {
-    transform: translateY(3px);
+  transform: translateY(3px);
 }
 
 .hamburger.is-open {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
+  background-color: $font-main;
 }
 
 .hamburger.is-open::after {
-    transform: rotate(-90deg) translateX(3px);
+  transform: rotate(-90deg) translateX(3px);
+  background-color: $font-main;
 }
 
 .hamburger.is-open::before {
-    opacity: 0;
-}
-
-#dark {
-
-    font-family: $font-stack;
-
-    .main-nav {
-        a {
-            @media (min-width: 768px) {
-                color: $font-main;
-            }
-        }
-    }
-
-    .main-header {
-        position: relative;
-    }
-
-    
-
-    .hamburger,
-        .hamburger::before,
-        .hamburger::after {
-            background-color: $dark;
-        }
-
-    
-
+  opacity: 0;
 }
